--- a/pom.xml
+++ b/pom.xml
@@ -10,12 +10,15 @@
 
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>hugo</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>${revision}${sha1}${changelist}</version>
 
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.107.3</jenkins.version>
         <java.level>8</java.level>
+        <revision>0.1.0</revision>
+        <changelist>-SNAPSHOT</changelist>
+        <sha1/>
     </properties>
 
     <name>Hugo Plugin</name>
